--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,12 +5,16 @@
 
     <string name="zh_text_sure">xt_确定</string>
     <string name="zh_text_cancel">xt_取消</string>
+    <string name="zh_text_dong_tai">xt_动态</string>
+
 
     <string name="en_text_sure">xt_sure</string>
     <string name="en_text_cancel">xt_cancel</string>
+    <string name="en_text_dong_tai">xt_dongtai</string>
 
 
     <string name="jp_text_sure">xt_を選択します</string>
     <string name="jp_text_cancel">xt_キャンセル</string>
+    <string name="jp_text_dong_tai">xt_ダイナミック</string>
 
 </resources>
